2004-08-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/clrpick.tcl (BuildDialog): 
	* library/msgbox.tcl (MessageBox): Add scheme for cancelling
	dialog boxes with Escape and also handle what happens when the
	window gets nuked from outside. [Bug 987169]

2004-08-04  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPhoto.c (ImgPhotoBlendComplexAlpha): Clean the code
	up a bit and add a few more comments.
	(Tk_PhotoPutBlock, Tk_PhotoPutZoomedBlock): Clarified the code,
	corrected the compositing rule now that I have looked up what the
	right thing to do is, and factorized out the compositing rule code
	into a few simpler macros.

2004-07-30  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure:
	* unix/tcl.m4 (SC_CONFIG_CFLAGS): Darwin: instead of setting PLAT_OBJS 
	to explict object files in tcl.m4, refer to MAC_OSX_OBJS makefile var.

2004-07-29  George Peter Staplin <georgeps@xmission.com>

	* generic/tkEvent.c (TkQueueEventForAllChildren): Code from the 
	core-8-4-branch to not queue events for unmapped windows was added.

2004-07-27  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkImgGIF.c (FileReadGIF): fix crash reported by Reinhard Max:
	in case of premature end of image data, return error instead of
	passing nil buffer to Tk_PhotoPutBlock().

2004-07-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tkfbox.tcl (::tk::dialog::file::Update): use -directory
	[pwd] (instead of .) to get around some VFS edge case bugs.
	Correct args passes to tk_messageBox when failing to cd.
	Add -force back to namespace import of msgcat.

2004-07-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkEvent.c (InvokeInputMethods): ensure IC focus is set
	after creation. [Bug #905830]

2004-07-20  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: added support to tk framework build to
	optionally install tk manpages in addition to html help,
	similarly to tcl/macosx/Makefile.
